syntax = "proto3";

package services.chat_service;
option go_package = "b2b/m/pkg/services/chat;chat_service";

import "third_party/go-proto-validators/validator.proto";
import "google/protobuf/empty.proto";

message IdRequest {
  int64 id = 1 [(validate.rules).int64 = {
    gt: 0,
  }];
}

message IdResponse {
  int64 id = 1 [(validate.rules).int64 = {
    gt: 0,
  }];
}

message ChatAndUserIdRequest {
  int64 ChatId = 1 [(validate.rules).int64 = {
    gt: 0,
  }];
  int64 UserId = 2 [(validate.rules).int64 = {
    gt: 0,
  }];
}

message CheckIfUniqChatRequest {
  int64 UserId = 1 [(validate.rules).int64 = {
    gt: 0,
  }];
  int64 ProductId = 2 [(validate.rules).int64 = {
    gt: 0,
  }];
}
message CheckIfUniqChatResponse {
  bool Unique = 1;
}

message NewChatRequest {
  string Name = 1;
  int64  CreatorId = 2 [(validate.rules).int64 = {
    gt: 0,
  }];
  int64  ProductId = 3 [(validate.rules).int64 = {
    gt: 0,
  }];
  bool  Blured = 4;
}

message GetChatRequest {
  int64  CreatorId = 1 [(validate.rules).int64 = {
    gt: 0,
  }];
  int64  ProductId = 2 [(validate.rules).int64 = {
    gt: 0,
  }];
}

message ChatResponse {
  int64 Id = 1 [(validate.rules).int64 = {
    gt: 0,
  }];
  string Name = 2;
  int64  CreatorId = 3 [(validate.rules).int64 = {
    gt: 0,
  }];
  int64  ProductId = 4 [(validate.rules).int64 = {
    gt: 0,
  }];
  string  Status = 5;
  bool  Blured = 6;
}

message WriteNewMsgRequest {
  int64 ChatId = 1 [(validate.rules).int64 = {
    gt: 0,
  }];
  int64  SenderId = 2 [(validate.rules).int64 = {
    gt: 0,
  }];
  int64  ReceiverId = 3 [(validate.rules).int64 = {
    gt: 0,
  }];
  bool  Checked = 4;
  string  Text = 5;
  string  Type = 6;
  string  Time = 7;
}
message MsgResponse{
  int64 Id = 1 [(validate.rules).int64 = {
    gt: 0,
  }];
  int64 ChatId = 2;
  int64  SenderId = 3 [(validate.rules).int64 = {
    gt: 0,
  }];
  int64  ReceiverId = 4 [(validate.rules).int64 = {
    gt: 0,
  }];
  string SenderName = 5;
  string ReceiverName = 6;
  bool  Checked = 7;
  string  Text = 8;
  string  Type = 9;
  string   Time = 10;
}

message ChatAndLastMsgResponse {
  int64 Id = 1 [(validate.rules).int64 = {
    gt: 0,
  }];
  string Name = 2;
  int64  CreatorId = 3 [(validate.rules).int64 = {
    gt: 0,
  }];
  int64  ProductId = 4 [(validate.rules).int64 = {
    gt: 0,
  }];
  string  Status = 5;
  bool  Blured = 6;
  MsgResponse Msg = 7;
}

message Bool {
  string Status = 1;
}



message MsgsResponse {
  repeated MsgResponse Msgs = 1;
}

message    GetAllUserChatsResponse{
  repeated ChatResponse Chats = 1;
}

message    GetAllChatsAndLastMsgResponse{
  repeated ChatAndLastMsgResponse Chats = 1;
}

message UpdateChatStatusRequest{
  int64 ChatId = 1 [(validate.rules).int64 = {
    gt: 0,
  }];
  string Status = 2;
  bool Blured = 3;
}


service ChatService {
  rpc CheckIfUniqChat(CheckIfUniqChatRequest) returns (CheckIfUniqChatResponse) {}
  rpc NewChat(NewChatRequest) returns (ChatResponse) {}
  rpc UpdateChatStatus(UpdateChatStatusRequest) returns (ChatResponse) {}
  rpc DeleteChat(IdRequest) returns (Bool) {}
  rpc GetChat(GetChatRequest) returns (ChatResponse) {}
  rpc GetChatById(IdRequest) returns (ChatResponse) {}
  rpc WriteNewMsg(WriteNewMsgRequest) returns (IdResponse) {}
  rpc GetMsgsFromChat(ChatAndUserIdRequest) returns (MsgsResponse) {}
  rpc GetAllUserChats(IdRequest) returns (GetAllUserChatsResponse) {}
  rpc GetAllChatsAndLastMsg(IdRequest) returns (GetAllChatsAndLastMsgResponse) {}
  rpc ChatHealthCheck (google.protobuf.Empty)  returns (google.protobuf.Empty) {}
}